[package]
name = "releasecheck"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.4"
prettytable-rs = "0.8.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
